# Supro

./: Cargo.toml  Info.plist  README.md  build.rs  build.sh  combine.py
assets/: AppIcon.icns
python/: mediapipe_processor.py  mediapipe_service.py
src/: _all_source.txt  app.rs  data.rs  main.rs  mediapipe_bridge.rs  tracking.rs  ui.rs  video.rs
