[package]
name = "arm_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
image = { version = "0.24", features = ["jpeg", "png"] }

# Math and Linear Algebra
nalgebra = "0.32"
nalgebra-glm = "0.18"

# Python Integration (commented out for now)
# pyo3 = { version = "0.20", features = ["auto-initialize"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Time and Date
chrono = "0.4"

# File System
directories = "5.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Basic utilities
once_cell = "1.19"

[build-dependencies]
# pyo3-build-config = "0.20"

[[bin]]
name = "arm_tracker"
path = "src/main.rs"